DATE       AUTHOR       CHANGE
---------- --------     --------------------------------------------------------
2003-02-21 nonchocoboy  Added gmtl.h convenience header.
2003-02-21 nonchocoboy  gmtl::Math::sign will now take any type as an argument.
2003-02-21 allenb       Fixed bug where direction cosines were being computed
                        incorrectly. The method was actually computing the
                        inverse of the correct value.
2003-02-06 nonchocoboy  Replaced build system with an SCons-based build system.
2003-01-10 subatomic    Added new Ray.h
                        added Ray/Plane Ray/Tri intersect functions
                        added LineSeg/Plane LineSeg/Tri intersect functions
2002-12-22 nonchocoboy  NEW VERSION: 0.1.13
2002-12-22 nonchocoboy  Added random number generator seed function.
2002-12-22 nonchocoboy  Added PointNi and VecNi convenience typedefs.
2002-11-26 subatomic    Added VecBase reflect(...) function.
2002-11-26 nonchocoboy  Added ability to make a AABox from a Sphere.
2002-11-26 nonchocoboy  Added AABox-Sphere intersection test.
2002-11-26 nonchocoboy  Added Sphere-Sphere sweep test.
2002-11-25 nonchocoboy  Added a quadratic formula solver to the Math lib.
2002-11-02 nonchocoboy  Compile fix for Containment.h - missing <vector> include
2002-11-01 nonchocoboy  Added sweep test for AABox.
                        NEW VERSION: 0.1.12
2002-10-28 nonchocoboy  set(AxisAngle, Quat) now guarantees that the AxisAngle
                        has a normalized axis.
                        NEW VERSION: 0.1.11
2002-10-17 nonchocoboy  Compiler fix for LineSeg::getLength().
                        NEW VERSION: 0.1.10
2002-10-11 nonchocoboy  Added output function for AABox.
2002-09-20 nonchocoboy  NEW VERSION: 0.1.9
2002-09-15 subatomic    added Math::clamp
2002-09-11 allenb       CoordQuat fixed so that it can be instantiated.
2002-08-06 subatomic    added intersection test between point3 and AAbox