@@ -1,5 +1,8 @@
 DATE       AUTHOR       CHANGE
 ---------- --------     --------------------------------------------------------
+2003-02-24 allenb       Changed Matrix::op[] to allow element access using
+                        row, column ordering.  The access element directly
+                        use Matrix::mData.
 2003-02-21 nonchocoboy  Added gmtl.h convenience header.
 2003-02-21 nonchocoboy  gmtl::Math::sign will now take any type as an argument.
 2003-02-21 allenb       Fixed bug where direction cosines were being computed
